{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 20,
  "lineage": "7117d077-e6e5-7289-2ee2-d44d083f4a94",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:528962174214:loadbalancer/nginx-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "nginx-elb-702387289.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0b0bdad846ef81f3e",
              "i-0f672162b67b53ee1"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "nginx-elb",
            "security_groups": [
              "sg-0e41ff4b1e99c93b5"
            ],
            "source_security_group": "528962174214/nginx_elb_sg",
            "source_security_group_id": "sg-0e41ff4b1e99c93b5",
            "subnets": [
              "subnet-087f84c3fe1f7de49",
              "subnet-092d79289bba85449"
            ],
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile_test",
            "aws_iam_role.allow_nginx_s3",
            "aws_instance.nginx1",
            "aws_instance.nginx2",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.elb-sg",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032930428bf1abbff",
            "arn": "arn:aws:ec2:us-east-1:528962174214:instance/i-0f672162b67b53ee1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile_test",
            "id": "i-0f672162b67b53ee1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "saswatkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-080635148ff55c498",
            "private_dns": "ip-10-1-0-8.ec2.internal",
            "private_ip": "10.1.0.8",
            "public_ip": "3.238.107.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01bacf4aaecd13de0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092d79289bba85449",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c13350e168801469"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile_test",
            "aws_iam_role.allow_nginx_s3",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032930428bf1abbff",
            "arn": "arn:aws:ec2:us-east-1:528962174214:instance/i-0b0bdad846ef81f3e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile_test",
            "id": "i-0b0bdad846ef81f3e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "saswatkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c5a36b5864ba942e",
            "private_dns": "ip-10-1-1-16.ec2.internal",
            "private_ip": "10.1.1.16",
            "public_ip": "3.83.240.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0730689e1b502c2ce",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-087f84c3fe1f7de49",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c13350e168801469"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile_test",
            "aws_iam_role.allow_nginx_s3",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_ami.aws-linux",
            "data.aws_availability_zones.available",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528962174214:internet-gateway/igw-0912cc83e918ae613",
            "id": "igw-0912cc83e918ae613",
            "owner_id": "528962174214",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0576aee34c7f9783b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00cf617a0114c7538",
            "owner_id": "528962174214",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0912cc83e918ae613",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-rtb"
            },
            "vpc_id": "vpc-0576aee34c7f9783b"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0978346ce257e0a2b",
            "route_table_id": "rtb-00cf617a0114c7538",
            "subnet_id": "subnet-092d79289bba85449"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b27fdc2ee9537a15",
            "route_table_id": "rtb-00cf617a0114c7538",
            "subnet_id": "subnet-087f84c3fe1f7de49"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528962174214:security-group/sg-0e41ff4b1e99c93b5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e41ff4b1e99c93b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_elb_sg",
            "name_prefix": "",
            "owner_id": "528962174214",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0576aee34c7f9783b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528962174214:security-group/sg-0c13350e168801469",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c13350e168801469",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "528962174214",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-nginx"
            },
            "timeouts": null,
            "vpc_id": "vpc-0576aee34c7f9783b"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528962174214:subnet/subnet-092d79289bba85449",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-092d79289bba85449",
            "map_public_ip_on_launch": true,
            "owner_id": "528962174214",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-subnet1"
            },
            "vpc_id": "vpc-0576aee34c7f9783b"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528962174214:subnet/subnet-087f84c3fe1f7de49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-087f84c3fe1f7de49",
            "map_public_ip_on_launch": true,
            "owner_id": "528962174214",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-subnet2"
            },
            "vpc_id": "vpc-0576aee34c7f9783b"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:528962174214:vpc/vpc-0576aee34c7f9783b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0851279d0a7b5b424",
            "default_route_table_id": "rtb-08a446f94c696fc8d",
            "default_security_group_id": "sg-09729c8bf0ea6ba81",
            "dhcp_options_id": "dopt-c84425b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0576aee34c7f9783b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08a446f94c696fc8d",
            "owner_id": "528962174214",
            "tags": {
              "BillingCode": "ACCT8675309",
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}